--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
-    "html-webpack-plugin": "^5.5.0"
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
