--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "url-loader": "^4.1.1",
     "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
