--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack-dev-server": "^4.11.1"
