--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jquery": "^3.6.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.8.2",
