--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.8.2",
